--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: certificate
+  uni: Funix
+  year: April - September, 2021
   # awards:
-  # summary:
+  # summary: good results
